[WIP] Replace Local File Loading with Direct Upload
The local file loading has the security implication that an attacker can load arbitary files located at the server.

Also removed dependencies to lambok, various JSON parsing libs and commons-lang3.

Also migrated to Java 17.